--- a/src/components/Comments/Comment.css
+++ b/src/components/Comments/Comment.css
@@ -1,7 +1,7 @@
-.cardUsers{
+.cardComment{
     max-width: 100%;
     max-height: 100%;
-    width: 300px;
-    border: solid 3px blue;
+    width: 90%;
+    border: solid 3px orange;
     margin: 10px;
 }
