--- a/src/components/Posts/Post.css
+++ b/src/components/Posts/Post.css
@@ -1,7 +1,7 @@
-.cardUsers{
+.cardPost{
     max-width: 100%;
     max-height: 100%;
     width: 300px;
-    border: solid 3px blue;
+    border: solid 3px yellow;
     margin: 10px;
 }
