--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -1,7 +1,7 @@
 .cardPost{
     max-width: 100%;
     max-height: 100%;
-    width: 300px;
+    width: 98%;
     border: solid 3px yellow;
     margin: 10px;
 }
