--- a/src/components/Posts/Posts.css
+++ b/src/components/Posts/Posts.css
@@ -1,7 +1,7 @@
 .wrapPosts{
-    max-width: 50%;
-    max-height: 50%;
-    width: 400px;
+    max-width: 98%;
+    max-height: 100%;
+    width: 100%;
     border: solid 3px violet;
     margin: 10px;
 }
