--- a/src/components/UserDetails/UserDetails.css
+++ b/src/components/UserDetails/UserDetails.css
@@ -1,7 +1,7 @@
 .cardUserDetails{
     max-width: 100%;
     max-height: 100%;
-    width: 300px;
-    border: solid 3px blue;
+    width: 50%;
+    border: solid 3px lightcoral;
     margin: 10px;
 }
