--- a/src/components/Users/Users.css
+++ b/src/components/Users/Users.css
@@ -1,8 +1,7 @@
 .wrapUsers{
     max-width: 50%;
-    max-height: 50%;
-    width: 400px;
+    max-height: 100%;
+    width: 50%;
     border: solid 3px green;
     margin: 10px;
-    display: flex;
 }
