--- a/src/pages/UsersPage/UserPage.module.css
+++ b/src/pages/UsersPage/UserPage.module.css
@@ -1,7 +1,6 @@
 .wrapUsers{
-    width: 50%;
+    width: 98%;
     border: solid 3px red;
-
 }
 
 .cardUser{
@@ -9,5 +8,13 @@
     max-height: 100%;
     width: 300px;
     border: solid 3px orange;
+    margin: 10px;
+}
+
+.cardUserDetails{
+    max-width: 100%;
+    max-height: 100%;
+    width: 50%;
+    border: solid 3px green;
     margin: 10px;
 }
