--- a/src/pages/PostsPage/PostPage.module.css
+++ b/src/pages/PostsPage/PostPage.module.css
@@ -1,17 +1,36 @@
-.wrapPosts{
-    max-width: 98%;
-    max-height: 100%;
+.wrapPostsPage{
     width: 100%;
+    height: 100%;
     border: solid 3px lightblue;
+    margin: 10px;
+    display: flex;
+}
+
+.wrapPosts{
+    width: 50%;
+    max-height: 100%;
+    border: solid 3px blue;
     margin: 10px;
 }
 
 
 .cardPost{
-    max-width: 50%;
+    width: 100%;
     max-height: 100%;
-    width: 98%;
     border: solid 3px yellow;
     margin: 10px;
 }
 
+.cardPostDetails{
+    width: 50%;
+    max-height: 100%;
+    border: solid 3px violet;
+    margin: 10px;
+}
+
+.cardCommentsDetails{
+    width: 100%;
+    max-height: 100%;
+    border: solid 3px darkmagenta;
+    margin: 10px;
+}
