--- a/src/components/componetns.module.css
+++ b/src/components/componetns.module.css
@@ -1,3 +1,14 @@
+
+.FormCats{
+    width: 50%;
+    border: solid 3px orange;
+}
+
+.FormDogs{
+    width: 50%;
+    border: solid 3px yellow;
+}
+
 .CatsList{
     width: 50%;
     border: solid 3px lightblue;
